FIX 144134 Menu expand/reduce button not visible on Edge + no pointer for menu modules links

--- a/skins/default/menu.scss
+++ b/skins/default/menu.scss
@@ -24,7 +24,6 @@ nav#menu {
 		}
 
 		> .filter {
-			width: 100%;
 
 			> label {
 				display: none;
@@ -53,6 +52,7 @@ nav#menu {
 				width: 100%;
 
 				> a {
+					cursor: default;
 					display: table-cell;
 					padding-left: 42px;
 					vertical-align: middle;
